--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" type='text/css'>
     <link rel="stylesheet" href="css/bootstrap.css" type='text/css'>
-    <script src='js/scripts.js' text="text/javascript" ></script>
+    <link rel="stylesheet" href="css/styles.css" type='text/css'>
     <script src='js/jquery-3.1.1.js' text="text/javascript" ></script>
+    <script src='js/scripts.js' text="text/javascript" ></script>
     <title>Zig-Zag</title>
   </head>
   <body>
-
+    <div class="container">
+        <div class="jumbotron zigzag-bg">
+          <h1>Zig-Zag</h1>
+        </div>
+        <form>
+          <label for="textInput"> enter a numba </label>
+          <input type="text" id="textInput">
+          <button type="submit" class='btn zigzag-bg'> >Go< </button>
+        </form>
+        <div class="result"></div>
+    </div>
   </body>
 </html>
