--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <body>
     <div class="container">
         <div class="jumbotron zigzag-bg">
-          <h1>Zig-Zag</h1>
+          <h1>| Zig-Zag |</h1>
         </div>
         <form>
-          <label for="textInput"> enter a numba </label>
-          <input type="text" id="textInput">
-          <button type="submit" class='btn zigzag-bg'> >Go< </button>
+          <label for="textInput"> Enter A Number : </label>
+          <input type="text" id="textInput" class='zigzag-tx'>
+          <button type="submit" class='btn'> >Go< </button>
         </form>
-        <div class="result"></div>
+        <div class="result zigzag-bg"></div>
     </div>
   </body>
 </html>
