--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   </head>
   <body>
     <div class="container">
-        <div class="jumbotron zigzag-bg">
+        <div class="jumbotron zigzagBg">
           <h1>| Zig-Zag |</h1>
         </div>
         <form>
           <label for="textInput"> Enter A Number : </label>
-          <input type="text" id="textInput" class='zigzag-tx'>
+          <input type="text" id="textInput" class='zigzagTx'>
           <button type="submit" class='btn'> >Go< </button>
         </form>
-        <div class="result zigzag-bg"></div>
+        <div class="result zigzagBg"></div>
     </div>
   </body>
 </html>
