clear textInput when you hit go, adjust html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <form>
           <label for="textInput"> Enter A Number : </label>
           <input type="text" id="textInput" class='zigzagTx'>
-          <button type="submit" class='btn'> >Go< </button>
+          <button type="submit" class='btn zigzagTx'> >Go< </button>
         </form>
         <div class="result zigzagBg"></div>
     </div>
